[package]
name = "autosplitter"
version = "0.1.0"
authors = ["Ted Wollman <25165500+TheTedder@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
asl = { path = "asl" }
bytemuck = { git = "https://github.com/Lokathor/bytemuck", branch = "main", features = ["derive"] }
arrayvec = { version = "0.7.0", default-features = false }
spinning_top = "0.2.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"

[profile.release.build-override]
opt-level = 0
