[package]
name = "asl"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2018"

[dependencies]
asl-derive = { path = "asl-derive" }
log = { version = "0.4.6", optional = true }
bytemuck = { git = "https://github.com/Lokathor/bytemuck", branch = "main" }

[features]
std = ["log"]
